# anti-scam

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.ru.md  banned.json.sha256  config.toml  docker-compose.yml  get-config.sh
migrations/: 20260723114756_init.sql
src/: commands.rs  config.rs  dataset.rs  db.rs  detection.rs  embeds.rs  events.rs  export.rs  images.rs  img_config.rs  interactions.rs  main.rs  utils.rs
