[package]
name = "anti-scam"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
image_hasher = "3.1.1"
poise = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3.23"
reqwest = "0.12"
sha2 = "0.11.0"
image = "0.25.10"
sqlx = { version = "0.8", features = ["migrate", "runtime-tokio", "sqlite"] }
lru = "0.18.1"
toml = "1.1.3"
